Fix for WMS-4075: Scrollbar are not displayed in preview page for mobile type devices

--- a/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
+++ b/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
@@ -30,6 +30,7 @@
 
     .app-page{
       position: fixed;
+      overflow: auto;
       left: 0;
       transition: left 0.5s  ease-in-out;
 
